# taskflow

./: .gitignore  .golangci.yml  .goreleaser.yml  .tskflwctl.toml  CLAUDE.md  Justfile  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/demo-planning/: .tskflwctl.toml  README.md
assets/vhs/: README.md  audit-show.tape  epic-show.tape  help.tape  picker.tape  status.tape  task-list.tape  tui.tape
cmd/taskflow/: main.go
cmd/tskflwctl/: main.go  main_test.go
contracts/: README.md
docs/: ARCHITECTURE.md
docs/cli/: tskflwctl.md  tskflwctl_audit.md  tskflwctl_audit_append.md  tskflwctl_audit_close.md  tskflwctl_audit_defer.md  tskflwctl_audit_edit.md  tskflwctl_audit_findings.md  tskflwctl_audit_info.md  tskflwctl_audit_lint.md  tskflwctl_audit_list.md  tskflwctl_audit_new.md  tskflwctl_audit_path.md  tskflwctl_audit_reopen.md  tskflwctl_audit_show.md  tskflwctl_board.md  tskflwctl_doctor.md  tskflwctl_epic.md  tskflwctl_epic_edit.md  tskflwctl_epic_list.md  tskflwctl_epic_move.md  (+36 more)
epics/: taskflow-v1-core.md
research/: ai-interaction-interfaces.md  ai-provider-abstraction.md  cli-language-options.md  documentation-integration-strategy.md
services/semantic-engine/: pyproject.toml
tasks/: taskflow-00-cross-repo-context.md  taskflow-00-monorepo-structure.md  taskflow-00-schema-contracts.md  taskflow-01-cli-skeleton-go.md  taskflow-02-json-schema-design.md  taskflow-03-docker-infrastructure.md  taskflow-08-doc-generation-engine.md  taskflow-09-interactive-project-start.md
(+971 files in other folders)
