[project]
name = "taskflow-semantic-engine"
version = "0.1.0"
description = "The intelligence layer for TaskFlow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
